<resources>
    <string name="app_name">VoiceRecorder</string>
    <string name="back">Back</string>
    <string name="new_file">New</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_recording">NEW RECORDING</string>
    <string name="saved_files">SAVED FILES</string>
    <string name="exit">EXIT</string>


    <string name="record">record</string>
    <string name="play">play</string>
    <string name="stop">stop</string>
    <string name="pause">pause</string>
</resources>
