<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/button4"

        style="@style/SmallButtons"

        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"

        android:onCLick="goback"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_file"
        android:id="@+id/button5"

        style="@style/SmallButtons"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/saved_files"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/button5"
        android:layout_centerHorizontal="true" />

</RelativeLayout>